fix scrollbar bug

--- a/src/jigsaw/assets/scss/index.scss
+++ b/src/jigsaw/assets/scss/index.scss
@@ -57,6 +57,9 @@
 .mCSB_inside > .mCSB_container {
     margin-right: 0;
 }
+.mCustomScrollBox.mCSB_vertical_horizontal.mCSB_inside > .mCSB_container_wrapper.mCS_no_scrollbar_x.mCS_x_hidden{
+    position: relative;
+}
 /*滚动条样式end*/
 
 /*时间组件样式start*/
